# spotipy-connect

./: .gitmodules  CMakeLists.txt  response.json
cmake/: Definitions.cmake
src/: CMakeLists.txt  main.cpp
src/display/: CMakeLists.txt  Display.cpp  Display.h
src/network/: CMakeLists.txt  TcpServer.cpp  TcpServer.h
